@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2025 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -86,10 +86,16 @@ public class PrefPageConnectionsGeneral extends AbstractPrefPage implements IWor
     @NotNull
     @Override
     protected Control createPreferenceContent(@NotNull Composite parent) {
-        Composite composite = UIUtils.createPlaceholder(parent, 1, 5);
+        Composite composite = UIUtils.createComposite(parent, 1);
 
         {
-            Group groupDefaults = UIUtils.createControlGroup(composite, CoreMessages.pref_page_connection_label_default_settings, 1, GridData.VERTICAL_ALIGN_BEGINNING, 0);
+            Composite groupDefaults = UIUtils.createTitledComposite(
+                composite,
+                CoreMessages.pref_page_connection_label_default_settings,
+                1,
+                GridData.VERTICAL_ALIGN_BEGINNING,
+                0
+            );
             Composite groupComposite = UIUtils.createComposite(groupDefaults, 2);
             connectionTypeCombo = ConnectionPageGeneral.createConnectionTypeCombo(groupComposite);
             connectionTypeCombo.addSelectionListener(new SelectionAdapter() {
@@ -125,7 +131,12 @@ public class PrefPageConnectionsGeneral extends AbstractPrefPage implements IWor
         }
 
         {
-            Group groupBehavior = UIUtils.createControlGroup(composite, CoreMessages.pref_page_connection_label_general, 1, GridData.VERTICAL_ALIGN_BEGINNING, 0);
+            Composite groupBehavior = UIUtils.createTitledComposite(
+                composite,
+                CoreMessages.pref_page_connection_label_general,
+                1,
+                GridData.VERTICAL_ALIGN_BEGINNING
+            );
             closeConnectionOnOsSleepCheck = UIUtils.createCheckbox(
                 groupBehavior,
                 CoreMessages.pref_page_connection_label_close_connection_on_sleep,
@@ -139,7 +150,13 @@ public class PrefPageConnectionsGeneral extends AbstractPrefPage implements IWor
         }
 
         {
-            Group groupObjects = UIUtils.createControlGroup(composite, CoreMessages.pref_page_eclipse_ui_general_group_general, 1, GridData.VERTICAL_ALIGN_BEGINNING, 0);
+            Composite groupObjects = UIUtils.createTitledComposite(
+                composite,
+                CoreMessages.pref_page_eclipse_ui_general_group_general,
+                1,
+                GridData.VERTICAL_ALIGN_BEGINNING,
+                0
+            );
             Label descLabel = new Label(groupObjects, SWT.WRAP);
             descLabel.setText(CoreMessages.pref_page_eclipse_ui_general_connections_group_label);
 
@@ -169,7 +186,7 @@ public class PrefPageConnectionsGeneral extends AbstractPrefPage implements IWor
 
     private void createWinstoreSettings(Composite composite) {
         if (RuntimeUtils.isWindows()) {
-            Group settings = UIUtils.createControlGroup(
+            Composite settings = UIUtils.createTitledComposite(
                 composite,
                 CoreMessages.pref_page_connections_group_security,
                 2,
@@ -206,7 +223,7 @@ public class PrefPageConnectionsGeneral extends AbstractPrefPage implements IWor
 
     private ConnectionNameResolver generateSampleDatasourceResolver() {
         final DataSourceRegistry dataSourceRegistry = new DataSourceRegistry(DBWorkbench.getPlatform().getWorkspace().getActiveProject());
-        DBPDriver driver = DriverUtils.getRecentDrivers(DriverUtils.getAllDrivers(), 1).get(0);
+        DBPDriver driver = DriverUtils.getRecentDrivers(DriverUtils.getAllDrivers(), 1).getFirst();
         DBPConnectionConfiguration conConfig = new DBPConnectionConfiguration();
         conConfig.setHostName("hostname");
         conConfig.setUserPassword("password1");
