@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2025 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,6 @@
  */
 package org.jkiss.dbeaver.registry;
 
-import org.eclipse.core.runtime.IAdaptable;
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.Status;
 import org.eclipse.core.runtime.jobs.Job;
@@ -37,7 +36,6 @@ import org.jkiss.dbeaver.model.data.DBDDataFormatterProfile;
 import org.jkiss.dbeaver.model.data.DBDFormatSettings;
 import org.jkiss.dbeaver.model.data.DBDValueHandler;
 import org.jkiss.dbeaver.model.data.json.JSONUtils;
-import org.jkiss.dbeaver.model.dpi.*;
 import org.jkiss.dbeaver.model.exec.*;
 import org.jkiss.dbeaver.model.impl.SimpleExclusiveLock;
 import org.jkiss.dbeaver.model.impl.data.DefaultValueHandler;
@@ -47,7 +45,10 @@ import org.jkiss.dbeaver.model.navigator.DBNBrowseSettings;
 import org.jkiss.dbeaver.model.net.*;
 import org.jkiss.dbeaver.model.preferences.DBPPropertySource;
 import org.jkiss.dbeaver.model.rm.RMProjectType;
-import org.jkiss.dbeaver.model.runtime.*;
+import org.jkiss.dbeaver.model.runtime.AbstractJob;
+import org.jkiss.dbeaver.model.runtime.DBRProcessDescriptor;
+import org.jkiss.dbeaver.model.runtime.DBRProgressMonitor;
+import org.jkiss.dbeaver.model.runtime.DBRShellCommand;
 import org.jkiss.dbeaver.model.secret.*;
 import org.jkiss.dbeaver.model.security.SMObjectType;
 import org.jkiss.dbeaver.model.sql.SQLDialectMetadata;
@@ -69,7 +70,6 @@ import org.jkiss.utils.CommonUtils;
 import java.io.StringReader;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.text.DateFormat;
@@ -82,7 +82,7 @@ public class DataSourceDescriptor
     implements
     DBPDataSourceContainer,
     DBPImageProvider,
-    IAdaptable,
+    DBPAdaptable,
     DBPStatefulObject,
     DBPRefreshableObject,
     DBSSecretObject {
@@ -156,7 +156,6 @@ public class DataSourceDescriptor
 
     private boolean temporary;
     private boolean hidden;
-    private boolean dpiEnabled;
 
     @NotNull
     private DataSourceNavigatorSettings navigatorSettings;
@@ -182,8 +181,6 @@ public class DataSourceDescriptor
     private transient final List<DBRProcessDescriptor> childProcesses = new ArrayList<>();
     private transient final List<DBPDataSourceTask> users = new ArrayList<>();
     private transient String clientApplicationName;
-    // DPI controller
-    private transient DPIProcessController dpiController;
 
     private transient final DBPExclusiveResource exclusiveLock = new SimpleExclusiveLock();
 
@@ -192,7 +189,7 @@ public class DataSourceDescriptor
         @NotNull String id,
         @NotNull DBPDriver driver,
         @NotNull DBPConnectionConfiguration connectionInfo) {
-        this(registry, ((DataSourceRegistry) registry).getDefaultStorage(), DataSourceOriginLocal.INSTANCE, id, driver, connectionInfo);
+        this(registry, ((DataSourceRegistry<?>) registry).getDefaultStorage(), DataSourceOriginLocal.INSTANCE, id, driver, connectionInfo);
     }
 
     public DataSourceDescriptor(
@@ -243,9 +240,9 @@ public class DataSourceDescriptor
      */
     public DataSourceDescriptor(@NotNull DataSourceDescriptor source, @NotNull DBPDataSourceRegistry registry, boolean setDefaultStorage) {
         this.registry = registry;
-        this.storage = setDefaultStorage ? ((DataSourceRegistry) registry).getDefaultStorage() : source.storage;
+        this.storage = setDefaultStorage ? ((DataSourceRegistry<?>) registry).getDefaultStorage() : source.storage;
         this.origin = source.origin;
-        this.manageable = setDefaultStorage && ((DataSourceRegistry) registry).getDefaultStorage().isDefault();
+        this.manageable = setDefaultStorage && ((DataSourceRegistry<?>) registry).getDefaultStorage().isDefault();
         this.accessCheckRequired = manageable;
         this.id = source.id;
         this.name = source.name;
@@ -349,10 +346,10 @@ public class DataSourceDescriptor
     @NotNull
     @Override
     public DBPDataSourceOrigin getOrigin() {
-        if (origin instanceof DataSourceOriginLazy) {
+        if (origin instanceof DataSourceOriginLazy dsoLazy) {
             DBPDataSourceOrigin realOrigin;
             try {
-                realOrigin = ((DataSourceOriginLazy) this.origin).resolveRealOrigin();
+                realOrigin = dsoLazy.resolveRealOrigin();
             } catch (DBException e) {
                 log.debug("Error reading datasource origin", e);
                 realOrigin = null;
@@ -400,6 +397,11 @@ public class DataSourceDescriptor
         return navigatorSettings;
     }
 
+    @NotNull
+    public DataSourceNavigatorSettings getOriginalNavigatorSettings() {
+        return navigatorSettings;
+    }
+
     public void setNavigatorSettings(DBNBrowseSettings copyFrom) {
         this.navigatorSettings = new DataSourceNavigatorSettings(copyFrom);
     }
@@ -411,7 +413,7 @@ public class DataSourceDescriptor
         return name;
     }
 
-    public void setName(String name) {
+    public void setName(@NotNull String name) {
         this.name = name;
     }
 
@@ -480,7 +482,7 @@ public class DataSourceDescriptor
     }
 
     @Override
-    public boolean hasModifyPermission(DBPDataSourcePermission permission) {
+    public boolean hasModifyPermission(@NotNull DBPDataSourcePermission permission) {
         if ((permission == DBPDataSourcePermission.PERMISSION_EDIT_DATA ||
             permission == DBPDataSourcePermission.PERMISSION_EDIT_METADATA) && connectionReadOnly) {
             return false;
@@ -492,6 +494,7 @@ public class DataSourceDescriptor
         }
     }
 
+    @NotNull
     @Override
     public List<DBPDataSourcePermission> getModifyPermission() {
         if (CommonUtils.isEmpty(this.connectionModifyRestrictions)) {
@@ -512,20 +515,11 @@ public class DataSourceDescriptor
 
     @Override
     public boolean isDefaultAutoCommit() {
-        if (connectionInfo.getBootstrap().getDefaultAutoCommit() != null) {
-            return connectionInfo.getBootstrap().getDefaultAutoCommit();
+        Boolean bootstrapAutoCommit = connectionInfo.getBootstrap().getDefaultAutoCommit();
+        if (bootstrapAutoCommit != null) {
+            return bootstrapAutoCommit;
         } else {
             return getConnectionConfiguration().getConnectionType().isAutocommit();
-        }
-    }
-
-    @Override
-    public void setDefaultAutoCommit(final boolean autoCommit) {
-        // Save in preferences
-        if (autoCommit == getConnectionConfiguration().getConnectionType().isAutocommit()) {
-            connectionInfo.getBootstrap().setDefaultAutoCommit(null);
-        } else {
-            connectionInfo.getBootstrap().setDefaultAutoCommit(autoCommit);
         }
     }
 
@@ -564,15 +558,6 @@ public class DataSourceDescriptor
     @Override
     public Integer getDefaultTransactionsIsolation() {
         return connectionInfo.getBootstrap().getDefaultTransactionIsolation();
-    }
-
-    @Override
-    public void setDefaultTransactionsIsolation(@Nullable final DBPTransactionIsolation isolationLevel) {
-        if (isolationLevel == null) {
-            connectionInfo.getBootstrap().setDefaultTransactionIsolation(null);
-        } else {
-            connectionInfo.getBootstrap().setDefaultTransactionIsolation(isolationLevel.getCode());
-        }
     }
 
     @Override
@@ -640,7 +625,7 @@ public class DataSourceDescriptor
     }
 
     @Override
-    public void setObjectFilter(Class<?> type, DBSObject parentObject, DBSObjectFilter filter) {
+    public void setObjectFilter(@NotNull Class<?> type, @Nullable DBSObject parentObject, @Nullable DBSObjectFilter filter) {
         FilterMapping filterMapping = getFilterMapping(type, parentObject, true);
         if (filterMapping != null) {
             // Update filter
@@ -706,6 +691,7 @@ public class DataSourceDescriptor
         }
     }
 
+    @Nullable
     @Override
     public DBPNativeClientLocation getClientHome() {
         if (clientHome == null && !CommonUtils.isEmpty(connectionInfo.getClientHomeId())) {
@@ -804,6 +790,7 @@ public class DataSourceDescriptor
         this.description = description;
     }
 
+    @Nullable
     public Date getConnectTime() {
         return connectTime;
     }
@@ -1009,7 +996,7 @@ public class DataSourceDescriptor
         } else {
             this.availableSharedCredentials = secretController.discoverCurrentUserSecrets(this);
             if (this.availableSharedCredentials.size() == 1) {
-                setSelectedSharedCredentials(availableSharedCredentials.get(0));
+                setSelectedSharedCredentials(availableSharedCredentials.getFirst());
             }
         }
 
@@ -1032,7 +1019,7 @@ public class DataSourceDescriptor
         return lastConnectionError;
     }
 
-    public boolean connect(DBRProgressMonitor monitor, boolean initialize, boolean reflect) throws DBException {
+    public boolean connect(@NotNull DBRProgressMonitor monitor, boolean initialize, boolean reflect) throws DBException {
         if (connecting) {
             log.debug("Can't connect - connect/disconnect is in progress");
             return false;
@@ -1047,10 +1034,9 @@ public class DataSourceDescriptor
         connecting = true;
         try {
             getDriver().validateFilesPresence(monitor, this);
-            if (isDetachedProcessEnabled() && !detachedProcess) {
-                // Open detached connection
-                succeeded = openDetachedConnection(monitor);
-            }
+
+            this.dataSource = openConnectionDetached(monitor, detachedProcess);
+            succeeded = this.dataSource != null;
             if (!succeeded) {
                 if (!detachedProcess) {
                     updateDataSourceObject(succeeded, DBPEvent.Action.BEFORE_CONNECT);
@@ -1077,67 +1063,9 @@ public class DataSourceDescriptor
         }
     }
 
-    public boolean isDetachedProcessEnabled() {
-        return dpiEnabled;
-    }
-
-    public void setDetachedProcessEnabled(boolean enabled) {
-        dpiEnabled = enabled;
-    }
-
-
-    private boolean openDetachedConnection(DBRProgressMonitor monitor) {
-        try {
-            DPIProvider provider = GeneralUtils.adapt(this, DPIProvider.class);
-            if (provider == null) {
-                log.debug("DPI provider not available");
-                return false;
-            }
-            dpiController = provider.detachDatabaseProcess(monitor, this);
-            Map<String, String> credentials = new LinkedHashMap<>();
-            DPIController dpiClient = dpiController.getClient();
-            DPISession session = dpiClient.openSession();
-            if (session == null) {
-                throw new IllegalStateException("No session");
-            }
-            log.debug("New DPI session: " + session.getSessionId());
-            if (!(getRegistry() instanceof DataSourcePersistentRegistry persistentRegistry)) {
-                throw new IllegalStateException("Illegal registry " + getRegistry().getClass());
-            }
-            DataSourceConfigurationManagerBuffer buffer = new DataSourceConfigurationManagerBuffer();
-            persistentRegistry.saveConfigurationToManager(new VoidProgressMonitor(),
-                buffer,
-                dsc -> dsc.equals(this)
-            );
-
-            String[] driverLibraries = getDriver().getDriverLibraries()
-                .stream()
-                .map(DBPDriverLibrary::getLocalFile)
-                .filter(Objects::nonNull)
-                .map(path -> path.toAbsolutePath().toString())
-                .toArray(String[]::new);
-            this.dataSource = dpiClient.openDataSource(
-                new DPIDataSourceParameters(
-                    session.getSessionId(),
-                    new String(buffer.getData(), StandardCharsets.UTF_8),
-                    driverLibraries,
-                    credentials
-                )
-            );
-            log.debug("Opened data source: " + dataSource);
-        } catch (Exception e) {
-            log.debug("Error starting DPI child process", e);
-            closeDetachedProcess();
-            return false;
-        }
-        return true;
-    }
-
-    private void closeDetachedProcess() {
-        if (dpiController != null) {
-            dpiController.close();
-            dpiController = null;
-        }
+    @Nullable
+    protected DBPDataSource openConnectionDetached(@NotNull DBRProgressMonitor monitor, boolean detachedProcess) {
+        return null;
     }
 
     private boolean connect0(DBRProgressMonitor monitor, boolean initialize, boolean reflect) throws DBException {
@@ -1145,11 +1073,25 @@ public class DataSourceDescriptor
 
         resolveSecretsIfNeeded();
 
-        if (isSharedCredentials() && !isSharedCredentialsSelected()) {
+        String forceSecretId = getPreferenceStore().getString(DBPConnectionConfiguration.PROP_SECRET_SUBJECT_ID);
+        if (isSharedCredentials() && (!isSharedCredentialsSelected() || CommonUtils.isNotEmpty(forceSecretId))) {
             var sharedCreds = listSharedCredentialFromCache();
-            if (!CommonUtils.isEmpty(sharedCreds)) {
-                log.debug("Shared credentials not selected - use first one: " + sharedCreds.get(0).getDisplayName());
-                setSelectedSharedCredentials(sharedCreds.get(0));
+            if (CommonUtils.isNotEmpty(forceSecretId)) {
+                DBSSecretValue found = null;
+                for (DBSSecretValue secret : sharedCreds) {
+                    if (forceSecretId.equals(secret.getSubjectId())) {
+                        log.debug("Shared credentials forced by preference - use: " + secret.getDisplayName());
+                        found = secret;
+                        break;
+                    }
+                }
+                if (found == null) {
+                    throw new DBException("Shared credentials with subject ID '" + forceSecretId + "' not found");
+                }
+                setSelectedSharedCredentials(found);
+            } else if (!CommonUtils.isEmpty(sharedCreds)) {
+                log.debug("Shared credentials not selected - use first one: " + sharedCreds.getFirst().getDisplayName());
+                setSelectedSharedCredentials(sharedCreds.getFirst());
                 monitor.subTask("Use first available shared credentials");
             } else {
                 log.debug("Shared credentials not found - attempt to connect as is");
@@ -1261,7 +1203,7 @@ public class DataSourceDescriptor
                             DBExecUtils.finishContextInitiation(this);
                         }
                     } catch (Exception e) {
-                        throw new DBCException("Can't initialize tunnel", e);
+                        throw new DBCException("Error initializing tunnel", e);
                     }
                     monitor.worked(1);
                 }
@@ -1455,8 +1397,9 @@ public class DataSourceDescriptor
             {
                 // Run output grab job
                 new AbstractJob(processDescriptor.getName() + ": output reader") {
+                    @NotNull
                     @Override
-                    protected IStatus run(DBRProgressMonitor monitor) {
+                    protected IStatus run(@NotNull DBRProgressMonitor monitor) {
                         try {
                             String output = processDescriptor.dumpErrors();
                             log.debug("Process error output:\n" + output);
@@ -1489,7 +1432,7 @@ public class DataSourceDescriptor
     }
 
     @Override
-    public boolean disconnect(final DBRProgressMonitor monitor) {
+    public boolean disconnect(@NotNull final DBRProgressMonitor monitor) {
         return disconnect(monitor, true);
     }
 
@@ -1506,10 +1449,7 @@ public class DataSourceDescriptor
         connecting = true;
         releaseDataSourceUsers(monitor);
         try {
-            if (dpiController != null) {
-                closeDetachedProcess();
-                return true;
-            }
+            closeConnectionDetached();
             monitor.beginTask("Disconnect from '" + getName() + "'", 5 + dataSource.getAvailableInstances().size());
 
             processEvents(monitor, DBPConnectionEventType.BEFORE_DISCONNECT);
@@ -1589,6 +1529,10 @@ public class DataSourceDescriptor
         }
     }
 
+    protected boolean closeConnectionDetached() {
+        return false;
+    }
+
     private void releaseDataSourceUsers(DBRProgressMonitor monitor) {
         List<DBPDataSourceTask> usersStamp;
         synchronized (users) {
@@ -1633,7 +1577,7 @@ public class DataSourceDescriptor
     }
 
     @Override
-    public boolean reconnect(final DBRProgressMonitor monitor)
+    public boolean reconnect(@NotNull final DBRProgressMonitor monitor)
         throws DBException {
         return reconnect(monitor, true);
     }
@@ -1658,7 +1602,7 @@ public class DataSourceDescriptor
     }
 
     @Override
-    public void acquire(DBPDataSourceTask user) {
+    public void acquire(@NotNull DBPDataSourceTask user) {
         synchronized (users) {
             if (users.contains(user)) {
                 log.warn("Datasource user '" + user + "' already registered in datasource '" + getName() + "'");
@@ -1669,7 +1613,7 @@ public class DataSourceDescriptor
     }
 
     @Override
-    public void release(DBPDataSourceTask user) {
+    public void release(@NotNull DBPDataSourceTask user) {
         synchronized (users) {
             if (!users.remove(user)) {
                 if (!isDisposed()) {
@@ -1680,10 +1624,11 @@ public class DataSourceDescriptor
     }
 
     @Override
-    public void fireEvent(DBPEvent event) {
+    public void fireEvent(@NotNull DBPEvent event) {
         registry.notifyDataSourceListeners(event);
     }
 
+    @NotNull
     @Override
     public Map<String, String> getTags() {
         return new LinkedHashMap<>(tags);
@@ -1694,13 +1639,14 @@ public class DataSourceDescriptor
         this.tags.putAll(tags);
     }
 
+    @Nullable
     @Override
-    public String getTagValue(String tagName) {
+    public String getTagValue(@NotNull String tagName) {
         return tags.get(tagName);
     }
 
     @Override
-    public void setTagValue(String tagName, String tagValue) {
+    public void setTagValue(@NotNull String tagName, @Nullable String tagValue) {
         tags.put(tagName, tagValue);
     }
 
@@ -1782,7 +1728,7 @@ public class DataSourceDescriptor
 
     @Nullable
     @Override
-    public <T> T getAdapter(Class<T> adapter) {
+    public <T> T getAdapter(@NotNull Class<T> adapter) {
         if (DBPDataSourceContainer.class.isAssignableFrom(adapter)) {
             return adapter.cast(this);
         } else if (adapter == DBPPropertySource.class) {
@@ -1939,9 +1885,7 @@ public class DataSourceDescriptor
         this.connectionReadOnly = descriptor.connectionReadOnly;
         this.forceUseSingleConnection = descriptor.forceUseSingleConnection;
 
-        this.dpiEnabled = descriptor.dpiEnabled;
-
-        this.navigatorSettings = new DataSourceNavigatorSettings(descriptor.getNavigatorSettings());
+        this.navigatorSettings = new DataSourceNavigatorSettings(descriptor.getOriginalNavigatorSettings());
     }
 
     @Override
@@ -1953,10 +1897,16 @@ public class DataSourceDescriptor
         if (!(obj instanceof DataSourceDescriptor source)) {
             return false;
         }
-        return
-            CommonUtils.equalOrEmptyStrings(this.name, source.name) &&
-                CommonUtils.equalOrEmptyStrings(this.description, source.description) &&
-                equalConfiguration(source);
+        return isLooselyEqualTo(source) && equalConfiguration(source) && equalInternalConfiguration(source);
+    }
+
+    public boolean isLooselyEqualTo(DataSourceDescriptor source) {
+        return CommonUtils.equalOrEmptyStrings(this.name, source.name) &&
+            CommonUtils.equalOrEmptyStrings(this.description, source.description);
+    }
+
+    public boolean equalInternalConfiguration(DataSourceDescriptor source) {
+        return CommonUtils.equalObjects(this.extensions, source.extensions);
     }
 
     public boolean equalConfiguration(DataSourceDescriptor source) {
@@ -1970,13 +1920,11 @@ public class DataSourceDescriptor
                 CommonUtils.equalObjects(this.originalDriver, source.originalDriver) &&
                 CommonUtils.equalObjects(this.driverSubstitution, source.driverSubstitution) &&
                 CommonUtils.equalObjects(this.connectionInfo, source.connectionInfo) &&
-                this.dpiEnabled == source.dpiEnabled &&
                 CommonUtils.equalObjects(this.filterMap, source.filterMap) &&
                 CommonUtils.equalObjects(this.formatterProfile, source.formatterProfile) &&
                 CommonUtils.equalObjects(this.clientHome, source.clientHome) &&
                 CommonUtils.equalObjects(this.lockPasswordHash, source.lockPasswordHash) &&
                 CommonUtils.equalObjects(this.folder, source.folder) &&
-                CommonUtils.equalObjects(this.extensions, source.extensions) &&
                 CommonUtils.equalObjects(this.preferenceStore, source.preferenceStore) &&
                 CommonUtils.equalsContents(this.connectionModifyRestrictions, source.connectionModifyRestrictions);
     }
@@ -2022,12 +1970,14 @@ public class DataSourceDescriptor
         }
     }
 
+    @NotNull
     @Override
     public IVariableResolver getVariablesResolver(boolean actualConfig) {
         DBPConnectionConfiguration configuration = actualConfig ? getActualConnectionConfiguration() : getConnectionConfiguration();
         return new DataSourceVariableResolver(this, configuration);
     }
 
+    @NotNull
     @Override
     public DBPDataSourceContainer createCopy(DBPDataSourceRegistry forRegistry) {
         DataSourceDescriptor copy = new DataSourceDescriptor(this, forRegistry, true);
@@ -2035,6 +1985,7 @@ public class DataSourceDescriptor
         return copy;
     }
 
+    @NotNull
     @Override
     public DBPExclusiveResource getExclusiveLock() {
         return exclusiveLock;
@@ -2283,6 +2234,10 @@ public class DataSourceDescriptor
         if (!CommonUtils.isEmpty(handlerList)) {
             for (Map<String, Object> handlerMap : handlerList) {
                 String handlerId = JSONUtils.getString(handlerMap, RegistryConstants.ATTR_ID);
+                if (handlerId == null) {
+                    log.warn("Network handler ID is missing in the configuration");
+                    continue;
+                }
                 DBWHandlerConfiguration hc = connectionInfo.getHandler(handlerId);
                 if (hc == null) {
                     log.warn("Handler '" + handlerId + "' not found in datasource '" + getId() + "'. Secret configuration will be lost.");
@@ -2350,6 +2305,4 @@ public class DataSourceDescriptor
             log.error("Error reading datasource '" + getId() + "' legacy secrets", e);
         }
     }
-
-
 }
